[package]
name = "crabz"
authors = ["Seth Stadick <sstadick@gmail.com>"]
version = "0.3.2-alpha.0"
edition = "2018"
license = "Unlicense/MIT"
readme = "README.md"
documentation = "https://docs.rs/crabz"
homepage = "https://github.com/sstadick/crabz"
repository = "https://github.com/sstadick/crabz"
categories = ["compression", "concurrency"]
keywords = ["compression", "parallel", "pigz"]
description = "Parallel Compression"

[[bin]]
name = "crabz"
path = "src/main.rs"

[features]
default = ["deflate_zlib_ng"]
deflate_zlib_ng = ["gzp/deflate_zlib_ng", "flate2/zlib-ng-compat"]
deflate_zlib = ["gzp/deflate_zlib", "flate2/zlib"]
deflate_rust = ["gzp/deflate_rust", "flate2/rust_backend"]

[dependencies]
anyhow = "1.0.43"
env_logger = "0.9.0"
flate2 = { version = "~1", default-features = false}
gzp = { version = "0.7.1", default-features = false}
#gzp = { git = "https://github.com/sstadick/gzp", branch = "feature/sync_mode", no-default-features = true, features = ["deflate_zlib"]}
#gzp = { path = "../gzp", default-features = false, features = ["deflate_zlib_ng"]}
log = "0.4.14"
num_cpus = "1.13.0"
structopt = "0.3.22"

