[package]
name = "crabz"
authors = ["Seth Stadick"]
version = "0.6.1"
edition = "2018"
license = "Unlicense/MIT"
readme = "README.md"
documentation = "https://docs.rs/crabz"
homepage = "https://github.com/sstadick/crabz"
repository = "https://github.com/sstadick/crabz"
categories = ["compression", "concurrency"]
keywords = ["compression", "parallel", "pigz"]
description = "Parallel Compression"

[[bin]]
name = "crabz"
path = "src/main.rs"

[features]
default = ["deflate_zlib_ng", "snap_default", "libdeflate"]

deflate_zlib_ng = ["gzp/deflate_zlib_ng", "flate2/zlib-ng-compat", "any_zlib"]
deflate_zlib = ["gzp/deflate_zlib", "flate2/zlib", "any_zlib"]
deflate_rust = ["gzp/deflate_rust", "flate2/rust_backend"]
snap_default = ["gzp/snappy_default", "snap", "snappy"]
libdeflate = ["gzp/libdeflate"]

snappy = [] # internal feature flag
any_zlib = [] # internal feature flag


[dependencies]
anyhow = "1.0.43"
env_logger = {version = "0.9.0", default-features = false, features = ["termcolor", "atty", "humantime"]}
flate2 = { version = "~1", default-features = false}
gzp = { version = "0.8.1", default-features = false}
lazy_static = "1.4.0"
log = "0.4.14"
num_cpus = "1.13.0"
structopt = "0.3.22"
strum = {version = "0.21.0", features = ["derive"]}
snap = {version = "1.0.5", optional = true}

[build-dependencies]
built = {version ="0.5.1", features = ["git2"]}
