[package]
name = "crabz"
authors = ["Seth Stadick"]
version = "0.9.1"
edition = "2018"
license = "Unlicense/MIT"
readme = "README.md"
documentation = "https://docs.rs/crabz"
homepage = "https://github.com/sstadick/crabz"
repository = "https://github.com/sstadick/crabz"
categories = ["compression", "concurrency"]
keywords = ["compression", "parallel", "pigz"]
description = "Parallel Compression"
exclude = ["bench-data/"]

[[bin]]
name = "crabz"
path = "src/main.rs"

[features]
default = ["deflate_zlib_ng", "snap_default", "libdeflate"]

deflate_zlib_ng = ["gzp/deflate_zlib_ng", "flate2/zlib-ng-compat", "any_zlib"]
deflate_zlib = ["gzp/deflate_zlib", "flate2/zlib", "any_zlib"]
deflate_rust = ["gzp/deflate_rust", "flate2/rust_backend"]
snap_default = ["gzp/snappy_default", "snap", "snappy"]
libdeflate = ["gzp/libdeflate"]

snappy = [] # internal feature flag
any_zlib = [] # internal feature flag


[dependencies]
anyhow = "1.0.68"
env_logger = { version = "0.10.0", default-features = false, features = ["default"] }
flate2 = { version = "1.0.25", default-features = false }
gzp = { version = "0.11.3", default-features = false }
lazy_static = "1.4.0"
log = "0.4.17"
num_cpus = "1.15.0"
structopt = "0.3.26"
strum = { version = "0.24.1", features = ["derive"] }
snap = { version = "1.1.0", optional = true }
mimalloc = { version = "0.1.34", default-features = false }
git-version = "0.3.5"
